MAT-15739: Ny service for endringslogg mot stedsnavn. Modulen kan kompilere med JDK 12.